更新 README.md 以反映项目名称和功能的变化，增加 AI 新闻、网络安全提示、技术就业趋势和科技热点新闻的获取功能；调整 GitHub Actions 工作流以每天早上 8 点运行并更新 README。

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,7 @@ name: Update README
 
 on:
   schedule:
-    - cron: '0 0 * * *' # 每天运行
+    - cron: '0 8 * * *' # 每天早上8点运行
   workflow_dispatch: # 允许手动触发
 
 jobs:
@@ -11,6 +11,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 # 获取完整历史以确保能正确推送
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -20,9 +22,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 markdown
+        pip install requests beautifulsoup4 markdown feedparser
         
-    - name: Update README with latest dev tips
+    - name: Update README with latest tech insights
       run: python .github/scripts/update_readme.py
       
     - name: Commit and push if changed
@@ -30,4 +32,4 @@ jobs:
         git config --global user.name 'GitHub Actions Bot'
         git config --global user.email 'actions@github.com'
         git add README.md
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update README with daily dev tips" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "自动更新: 技术资讯 $(date +'%Y-%m-%d')" && git push)
