--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -25,7 +25,11 @@ jobs:
         pip install requests beautifulsoup4 markdown feedparser
         
     - name: Update README with latest tech insights
-      run: python .github/scripts/update_readme.py
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests beautifulsoup4 markdown feedparser
+        python .github/scripts/update_readme.py
+        cat README.md | tail -n 50  # 显示更新后的README末尾内容
       
     - name: Commit and push if changed
       run: |
