🔧 修复GitHub Pages链接：更新为正确的用户名和仓库地址
✅ 修复内容：
- 🌐 更新主页面GitHub链接
- 📡 修复API文档中的示例URL
- 📰 更新RSS订阅源链接
- ⚙️ 修正Jekyll配置文件
- 🔗 统一所有链接为: https://zzyss-marker.github.io/actions/

🎯 影响范围：
- docs/index.html - 主页面链接
- docs/api/index.html - API文档链接
- docs/rss/*.xml - RSS订阅源链接
- docs/_config.yml - Jekyll配置
- .github/scripts/rss_generator.py - RSS生成器配置

现在所有链接都指向正确的GitHub Pages地址！

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: 技术视野助手
 description: 每日技术资讯聚合平台，AI驱动的技术新闻和趋势分析
-url: "https://your-username.github.io"
+url: "https://zzyss-marker.github.io"
 baseurl: "/actions"
 
 # GitHub Pages settings
@@ -13,7 +13,7 @@ plugins:
 lang: zh-CN
 author: 技术视野助手
 twitter:
-  username: your_twitter
+  username: zzyss_marker
   card: summary
 
 # Navigation
